# vidrs

./: Cargo.toml  LICENSE-MIT  README.md  camera_frame.420v.1280.720
examples/: egui.rs  gui.rs
src/: camera.rs  codec.rs  gui.rs  index.html  main.rs  webrtc.rs
src/camera/: avfoundation.rs  camera.rs  eye.rs  mac_avfoundation.rs  mod.rs  nokhwa.rs
src/codec/: vp8_encoder.rs
src/gui/: cube.rs  egui_video_view.rs  mod.rs  stage.rs  video_view.rs
