[package]
name = "vid-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
icrate = { version = "0.0.1", features = ["Foundation"] }
log = "0.4.17"
objc2 = "0.3.0-beta.3"
tokio = { version = "1.23.0", features = ["full"] }
# mac-camera-rs = {path = "../mac-camera-rs"}
