[package]
edition = "2021"
name = "vid-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bitflags = "1.3.2"
bytes = "1.3.0"
env-libvpx-sys = "5.1.2"
env_logger = "0.10.0"
hyper = {version = "0.14.23", features = ["full"]}
icrate = {version = "0.0.1", features = ["Foundation"]}
log = "0.4.17"
objc2 = "0.3.0-beta.3"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = {version = "1.23.0", features = ["full"]}
webrtc = "0.6.0"
