[package]
authors = ["Gilbert Röhrbein"]
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "vidrs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.68"
bitflags = "1.3.2"
bytes = "1.3.0"
egui = "0.19"
egui-miniquad = "0.12"
env-libvpx-sys = "5.1.2"
env_logger = "0.10.0"
eye = {git = "https://github.com/raymanfx/eye-rs.git", branch = "next"}
futures = "0.3.25"
glam = "0.22.0"
glium = "0.32.1"
hyper = {version = "0.14.23", features = ["full"]}
icrate = {version = "0.0.1", features = ["Foundation"]}
log = "0.4.17"
miniquad = "^0.3.12"
objc2 = "0.3.0-beta.3"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = {version = "1.23.0", features = ["full"]}
tokio-stream = {version = "0.1.11", features = ["sync"]}
webrtc = "0.6.0"

[patch.crates-io]
miniquad = {git = "https://github.com/payload/miniquad.git", branch = "master"}
